<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_doubled_margin">

        <TextView
                android:id="@+id/registration_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textSize="@dimen/login_register_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <EditText
                android:id="@+id/email_reg_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textSize="@dimen/login_register_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_textview"
                android:layout_marginTop="@dimen/view_doubled_margin"/>

        <EditText
                android:id="@+id/password_reg_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="@dimen/login_register_text_size"
                app:layout_constraintTop_toBottomOf="@id/email_reg_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/view_margin"/>

        <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/login_register_text_size"
                app:layout_constraintTop_toBottomOf="@+id/password_reg_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/view_margin"/>

        <TextView
                android:id="@+id/go_to_login_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_login"
                android:textColor="@color/login_registration_change_color"
                app:layout_constraintTop_toBottomOf="@+id/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/view_half_margin"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>