<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/view_margin">

    <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/task_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Meeting with clients for discussing a new project"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_edit_title"/>

    <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_priority"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:orientation="horizontal">

        <RadioButton android:id="@+id/line1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/high"/>

        <RadioButton android:id="@+id/line2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/medium"/>

        <RadioButton android:id="@+id/line3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/low"/>
    </RadioGroup>

    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

    <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/task_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Need to meet with clients to discuss project before 19 Feb"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_edit_description"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:layout_marginTop="@dimen/view_half_margin"
            android:layout_marginBottom="@dimen/view_half_margin"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/task_edit_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10 min before"
            android:drawableRight="@drawable/ic_go_arrow"
            android:drawableEnd="@drawable/ic_go_arrow"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="@dimen/view_half_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_edit_notification"/>

    <Button
            android:id="@+id/task_edit_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_hint"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="@dimen/task_item_text_size"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_margin="@dimen/view_half_margin"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>